# dystellar-launcher-rs

./: .env  .gitignore  Cargo.toml  README.md  build.rs
css_documents/: buttons.css  components.css  global.css  names.css
src/: css.rs  logic.rs  main.rs
src/api/: config.rs  mod.rs
src/api/control/: callbacks.rs  database.rs  dir_provider.rs  fs.rs  http.rs  mod.rs
src/api/typedef/: implementation.rs  manifest.rs  mod.rs  ms_session.rs  task_manager.rs
src/css/: buttons.rs  components.rs  global.rs  mod.rs
src/ui/: animations.rs  app.rs  button_growable.slint  components.rs  dialog.rs  dialogs.rs  helpers.rs  implementations.rs  infoholder.slint  launch.rs  launcher.rs  main_ui.rs  mod.rs  subheader.slint  welcome_ui.rs  windows_animations.rs
src/ui/icons/: mod.rs
src/ui_bindings/: helpers.rs
src/utils/: img.rs
ui/: account_holder.slint  app.slint  button_growable.slint  button_regular.slint  clean_spinner.slint  container.slint  download_manager.slint  fallback_dialog.slint  header.slint  hoverable_text.slint  icon_button.slint  icon_image.slint  infoholder.slint  main.slint  modinfo_ui.slint  mods_btn.slint  mods_ui.slint  progress_bar.slint  socials.slint  subheader.slint  task_manager.slint  toggle_slider.slint  web_content.slint  welcome_ui.slint
ui/typedef/: dialog_utils.slint  type.slint
