[package]
name = "dystellar-launcher"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[[bin]]
name = "dystellar-launcher"
path = "src/main.rs"

[build-dependencies]
slint-build = "1.13"
dotenv = "0.15.0"

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
debug = false
panic = "abort"


[dependencies]
webbrowser = "1.0.3"
json = "0.12.4"
uuid = { version = "1.16.0", features = ["v4"] }
ureq = { version = "3.0.11", default-features = false, features = ["rustls", "charset"] }
sled = "0.34.7"
directories = "6.0.0"
chrono = "0.4.41"
magic-crypt = "4.0.1"
slint = { version = "1.13", default-features = false, features = ["compat-1-2", "std", "log", "accessibility", "raw-window-handle-06", "backend-winit", "renderer-skia-vulkan", "renderer-skia-opengl"] }
