[package]
name = "dystellar-launcher"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[[bin]]
name = "dystellar-launcher"
path = "src/main.rs"

[build-dependencies]
slint-build = "1.13"
dotenv = "0.15.0"

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
debug = false
panic = "abort"


[dependencies]
webbrowser = "1.0.3"
json = "0.12.4"
uuid = { version = "1.16.0", features = ["v4"] }
ureq = { version = "3.0.11", default-features = false, features = ["rustls", "charset"] }
sled = "0.34.7"
directories = "6.0.0"
chrono = "0.4.41"
magic-crypt = "4.0.1"
itertools = "0.14.0"
zip = "7.0.0"
tar = "0.4.44"
flate2 = "1.1.5"
sha1 = "0.10.6"
sha2 = "0.10.9"
slint = { version = "1.14.1", default-features = false, features = ["compat-1-2", "std", "accessibility", "raw-window-handle-06", "backend-winit", "renderer-skia-vulkan"] }
